Bug 105644 - [CI] igt@* - dmesg-warn - *ERROR* Failed to read TMDS config: -6 &| *ERROR* Set TMDS ratio failed &| *ERROR* [CONNECTOR:101:HDMI-A-1] Failed to configure sink scrambling/TMDS bit clock ratio
Summary: [CI] igt@* - dmesg-warn - *ERROR* Failed to read TMDS config: -6 &| *ERROR* S...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: high normal
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
: 105914 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-03-21 09:22 UTC by Marta Löfstedt
Modified: 2018-04-20 05:46 UTC (History)
4 users (show)

See Also:
i915 platform: GLK
i915 features: display/HDMI


Attachments
attachment-13718-0.html (2.26 KB, text/html)
2018-03-27 05:47 UTC, JingWu Lin
no flags Details

Comment 2 Jani Saarinen 2018-03-22 12:52:17 UTC
Looks like this https://bugs.freedesktop.org/show_bug.cgi?id=105655 is dup of this bug here?
Comment 3 Jani Saarinen 2018-03-22 13:29:30 UTC
Reference: https://patchwork.freedesktop.org/patch/212118/
Comment 4 Marta Löfstedt 2018-03-22 15:00:56 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3967/fi-glk-j4005/igt@debugfs_test@read_all_entries.html

[   41.598265] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
[   41.598361] [drm:intel_encoders_disable.isra.62 [i915]] *ERROR* Set TMDS ratio failed
[   41.617866] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
[   41.617952] [drm:intel_enable_ddi [i915]] *ERROR* Set TMDS ratio failed
Comment 5 Marta Löfstedt 2018-03-26 06:17:59 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@debugfs_test@read_all_entries.html

[  413.092874] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
[  413.129872] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
[  413.129928] [drm:intel_enable_ddi [i915]] *ERROR* [CONNECTOR:101:HDMI-A-1] Failed to configure sink scrambling/TMDS bit clock ratio
[  413.433626] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
[  413.452135] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
[  413.452198] [drm:intel_enable_ddi [i915]] *ERROR* [CONNECTOR:101:HDMI-A-1] Failed to configure sink scrambling/TMDS bit clock ratio

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@kms_pipe_crc_basic@read-crc-pipe-b-frame-sequence.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@kms_busy@basic-flip-b.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@drv_module_reload@basic-no-display.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@kms_pipe_crc_basic@suspend-read-crc-pipe-a.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@pm_rpm@basic-pci-d3-state.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@kms_pipe_crc_basic@read-crc-pipe-c-frame-sequence.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@drv_module_reload@basic-reload-inject.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@kms_pipe_crc_basic@nonblocking-crc-pipe-b-frame-sequence.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@kms_flip@basic-flip-vs-wf_vblank.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@kms_pipe_crc_basic@nonblocking-crc-pipe-c.html
Comment 6 Marta Löfstedt 2018-03-26 09:50:22 UTC
The "fix" was included here: https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/git-log.log


However it doesn't seem to work since this was reproduced on that same run:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3974/fi-glk-j4005/igt@gem_exec_suspend@basic-s3.html
Comment 7 Marta Löfstedt 2018-03-26 09:51:12 UTC
And even later we are still hitting this issue:
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3976/fi-glk-j4005/igt@kms_pipe_crc_basic@read-crc-pipe-c.html
Comment 8 Jani Saarinen 2018-03-26 10:25:56 UTC
HI,Note, CI config change so that now GLK has dedicated 4K HDMI2.0 Display. 
Let see if there is difference with that to results.
Comment 9 Marta Löfstedt 2018-03-26 10:43:58 UTC
From IRC:
<marta_> tsa, drmtip_7 has 549 issues, it is basically the fi-glk-j4005 dmesg-warn:
<marta_>  
<marta_> [  108.873403] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
<marta_> [  108.900365] [drm:drm_scdc_set_high_tmds_clock_ratio] *ERROR* Failed to read TMDS config: -6
<marta_> [  108.900422] [drm:intel_enable_ddi [i915]] *ERROR* [CONNECTOR:101:HDMI-A-1] Failed to configure sink scrambling/TMDS bit clock ratio
* Notify: jsaa is online (Ubuntu Servers (freenode))
* jsaa (~jsaa@134.134.139.76) has joined
<tsa> marta_: ahah :) so hdmi2.0 again?
<tsa> CI back to testing
<mupuf> tsa, marta_ we started looking into that with vsyrjala and imre on Friday. We tried rebooting the screen
<tsa> oh pooh, that hdmi issue makes the html much larger
-SaslServ- <Unknown user (via SASL):165.176.37.188.rev.vodafone.pt> failed to login to marta.  There have been 19 failed login attempts since your last successful login.
<marta_> mupuf, tsa, vsyrjala see comments in:  https://bugs.freedesktop.org/show_bug.cgi?id=105644
<vsyrjala> so far my conclusion is that the display gets confused and stops responding to scdc
<vsyrjala> maybe try connecting only one source to it and see if it fares any better
<marta_> tsa, do we have any other option to get real HDMI 2.0 on HDMI 2.0 display?
<marta_> tsa, is that display on KVM? Is KVM HDMI 2.0?
<tsa> marta_: no hdmi2.0 kvm here
<tsa> marta_: we separated GLK to its own monitor (also hdmi 2.0), cnl is alone now on the old HDMI2.0
<tsa> real monitors both, we don't have HDMI2.0 dongles I think
<tsa> vsyrjala too ^
<marta_> tsa, so then we could swap the HDMI 2.0 monitors and check vsyrjala theory of broken display
<tsa> yes, as soon as we get some results from this setup
Comment 10 JingWu Lin 2018-03-27 05:47:50 UTC
Created attachment 138369 [details]
attachment-13718-0.html

OoO until WW16.1(4/16)
For emergency please contact FAE

Sorry for your inconvience
Comment 11 Jani Saarinen 2018-04-06 08:23:41 UTC
It seems this bug is fixed as not seen after:
8017e422af3f ("drm/scdc-helper: Convert errors into debug messages")
277ab5abc68d ("drm/i915: Don't spew errors when resetting HDMI scrambling/bit clock ratio fails")
See also: https://bugs.freedesktop.org/show_bug.cgi?id=105914

But now there is new issue I suppose get's new bug?
	
[  412.834893] sd 0:0:0:0: [sda] Synchronizing SCSI cache
[  412.839289] sd 0:0:0:0: [sda] Stopping disk
[  413.045403]  cache: parent cpu1 should not be sleeping
[  413.123717] sd 0:0:0:0: [sda] Starting disk
[  413.128140] [drm:_bxt_ddi_phy_init [i915]] *ERROR* timeout during PHY0 power on
Comment 12 Jani Saarinen 2018-04-06 08:24:15 UTC
So should we resolve this and make new from new issue? Ville?
Comment 13 Ville Syrjala 2018-04-06 11:30:47 UTC
(In reply to Jani Saarinen from comment #12)
> So should we resolve this and make new from new issue? Ville?

Yes. New bug for the phy fail please.
Comment 14 Jani Saarinen 2018-04-06 12:05:15 UTC
That is already: https://bugs.freedesktop.org/show_bug.cgi?id=105771
Comment 15 Jani Saarinen 2018-04-06 13:35:05 UTC
Patches from Ville fix this issue.
Comment 16 Jani Saarinen 2018-04-09 06:08:45 UTC
*** Bug 105914 has been marked as a duplicate of this bug. ***
Comment 17 Jani Saarinen 2018-04-20 05:46:44 UTC
*** Bug 105655 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.